education/educationapp/force-app/main/default/objects/edu_curso__c/edu_curso__c.object-meta.xml
<CustomObject>
    <label>Curso</label>
    <nameField>
        <label>Nome do Curso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cursos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>