education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_cargahoraria__c.field-meta.xml
<CustomField>
    <fullName>edu_cargahoraria__c</fullName>
    <inlineHelpText>Carga horária total do curso (soma de todas as cargas horárias das disciplinas associadas a este curso, cujo o cumprimento deve ser realizado para a conclusão do curso).</inlineHelpText>
    <label>Carga Horária</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>