education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_certificadoemitido__c.field-meta.xml
<CustomField>
    <fullName>edu_certificadoemitido__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar caso o certificado já tenha sido emitido. Caso ainda esteja em processo de emissão, não selecionar.</inlineHelpText>
    <label>Certificado Emitido?</label>
    <type>Checkbox</type>
</CustomField>