education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_codigodeacesso__c.field-meta.xml
<CustomField>
    <fullName>edu_codigodeacesso__c</fullName>
    <inlineHelpText>Código de acesso ao portal do aluno, como por exemplo o RA ou a matricula. Caso não possua, replicar o ID do Código do Curso gerado automaticamente pela plataforma (Exemplo: CS-0001).</inlineHelpText>
    <label>Código de Acesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>