education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_codigodocurso__c.field-meta.xml
<CustomField>
    <fullName>edu_codigodocurso__c</fullName>
    <inlineHelpText>Código do curso conforme consta no contrato da instituição de ensino. Caso não tenha, replicar o numero da matricula.</inlineHelpText>
    <label>Código do Curso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>