education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_cursoaluno__c.field-meta.xml
<CustomField>
    <fullName>edu_cursoaluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Aluno matriculado no curso.</inlineHelpText>
    <label>Aluno</label>
    <referenceTo>edu_aluno__c</referenceTo>
    <relationshipLabel>Alunos</relationshipLabel>
    <relationshipName>edu_cursoaluno</relationshipName>
    <type>Lookup</type>
</CustomField>