education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_datadeemissao__c.field-meta.xml
<CustomField>
    <fullName>edu_datadeemissao__c</fullName>
    <inlineHelpText>Data em que o certificado foi emitido, ou a data de conclusão que consta no certificado.</inlineHelpText>
    <label>Data de Emissão do Certificado</label>
    <type>Date</type>
</CustomField>