education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_datadeingresso__c.field-meta.xml
<CustomField>
    <fullName>edu_datadeingresso__c</fullName>
    <inlineHelpText>Data do início do curso, ingresso na instituição de ensino ou efetivação da matricula.</inlineHelpText>
    <label>Data de Ingresso</label>
    <type>Date</type>
</CustomField>