education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_datadetermino__c.field-meta.xml
<CustomField>
    <fullName>edu_datadetermino__c</fullName>
    <inlineHelpText>Data de término do curso, informado no diploma acadêmico emitido ou a data do cumprimento e aprovação de todas as disciplinas associadas ao curso.</inlineHelpText>
    <label>Data de Término</label>
    <type>Date</type>
</CustomField>