education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_discurso__c.field-meta.xml
<CustomField>
    <fullName>edu_discurso__c</fullName>
    <inlineHelpText>Quantidade de disciplinas associadas neste curso.</inlineHelpText>
    <label>Disciplinas Matriculadas</label>
    <summaryForeignKey>edu_disciplina__c.edu_discurso__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>