education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_instcurso__c.field-meta.xml
<CustomField>
    <fullName>edu_instcurso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Instituição de ensino associada ao curso.</inlineHelpText>
    <label>Instituição de Ensino</label>
    <referenceTo>edu_instituicaodeensino__c</referenceTo>
    <relationshipLabel>Cursos</relationshipLabel>
    <relationshipName>edu_instcurso</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>