education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_matricula__c.field-meta.xml
<CustomField>
    <fullName>edu_matricula__c</fullName>
    <inlineHelpText>Matricula do aluno como consta no contrato de prestação de serviço da instituição de ensino.</inlineHelpText>
    <label>Matricula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>