education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_portaldoaluno__c.field-meta.xml
<CustomField>
    <fullName>edu_portaldoaluno__c</fullName>
    <inlineHelpText>Endereço web do portal do aluno, por onde são acessadas as disciplinas, ou a secretaria.</inlineHelpText>
    <label>Portal do Aluno</label>
    <type>Url</type>
</CustomField>