education/educationapp/force-app/main/default/objects/edu_curso__c/fields/edu_valordocurso__c.field-meta.xml
<CustomField>
    <fullName>edu_valordocurso__c</fullName>
    <inlineHelpText>Valor pago mensalmente no curso, em reais, separando o centavos com ponto (Exemplo: 550.93 - quinhentos e cinquenta reais e noventa e três centavos).</inlineHelpText>
    <label>Valor do Curso</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>